--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #5d7171;
+    --background: #1a3030;
     --foreground: #180303;
   }
 }
