--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #1a3030;
-    --foreground: #180303;
+    --background:  #224b5a;
+    --foreground: #eff7f9;
   }
 }
 
